Reduce warnings in tests ()